--- a/frontend-alone/package.json
+++ b/frontend-alone/package.json
@@ -12,9 +12,13 @@
     "@types/react-dom": "^18.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "install": "^0.13.0",
+    "npm": "^10.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.12",
+    "styled-reset": "^4.5.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
