--- a/frontend-alone/.eslintrc.json
+++ b/frontend-alone/.eslintrc.json
@@ -30,12 +30,7 @@
               "tsx":"never"
             }
         ],
-        "@typescript-eslint/explicit-function-return-type":[
-            "error",
-            {
-              "allowExpressions":true
-            }
-        ],
+        "@typescript-eslint/explicit-function-return-type": "off",
         "react-hooks/rules-of-hooks":"error",
         "react-hooks/exhaustive-deps":"warn"
     },
