--- a/frontend-alone/package.json
+++ b/frontend-alone/package.json
@@ -16,6 +16,7 @@
     "npm": "^10.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.12",
     "styled-reset": "^4.5.2",
